--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tu tienda de Desarrollo a la mano" />
     <meta name="keywords"
-        content="desarrollo, Desarrollo, aplicaciones, web, pagina, desarrollar paginas web, crear paginas web, desarrollo de aplocaciones, agencia de software, software, development, colombia" />
+        content="desarrollo, Desarrollo, aplicaciones, web, pagina, desarrollar paginas web, crear paginas web, desarrollo de aplocaciones, agencia de software, software, development, colombia, devandesing,devandesign,dev&desing,Dev&Desing,Dev&Design" />
     <meta name="author" content="devanddesing" />
     <meta name="copyright" content="devanddesing" />
     <meta name="robots" content="noindex,nofollow">
@@ -663,90 +663,19 @@
 
                                             <!-- Slide -->
                                             <div class="swiper-slide">
-                                                <div class="card">
-                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
+                                                <div class="card text-center">
+                                                    <img class="quotes mx-auto" src="assets/img/comillas.png" alt="alternative" >
                                                     <div class="card-body">
                                                         <p class="testimonial-text">Fusce tincidunt dui nec diam varius
                                                             venenatis. Nullam tristique rutrum odio, ut tincidunt erat
                                                             dictum in. Etiam et aliquet mi, et vehicula elit fusce porta
                                                             ullamcorper</p>
-                                                        <div class="details">
+                                                        <div class="details" >
                                                             <img class="testimonial-image"
                                                                 src="assets/img/testimonial-1.jpg" alt="alternative">
                                                             <div class="text">
                                                                 <div class="testimonial-author">Samantha Bloom</div>
                                                                 <div class="occupation">Team Leader - Syncnow</div>
-                                                            </div> <!-- end of text -->
-                                                        </div> <!-- end of testimonial-details -->
-                                                    </div>
-                                                </div>
-                                            </div> <!-- end of swiper-slide -->
-                                            <!-- end of slide -->
-
-                                            <!-- Slide -->
-                                            <div class="swiper-slide">
-                                                <div class="card">
-                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
-                                                    <div class="card-body">
-                                                        <p class="testimonial-text">Mauris ut mattis nisl. Nunc ultrices
-                                                            nisi eget nisl pulvinar iaculis vitae ac nulla. Nullam
-                                                            fringilla
-                                                            varius blandit. Nam sit amet eleifend justo blogo rovan de
-                                                            chichis kokos venir dab</p>
-                                                        <div class="details">
-                                                            <img class="testimonial-image"
-                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
-                                                            <div class="text">
-                                                                <div class="testimonial-author">Mike Page</div>
-                                                                <div class="occupation">Developer - Chainlink</div>
-                                                            </div> <!-- end of text -->
-                                                        </div> <!-- end of testimonial-details -->
-                                                    </div>
-                                                </div>
-                                            </div> <!-- end of swiper-slide -->
-                                            <!-- end of slide -->
-
-                                            <!-- Slide -->
-                                            <div class="swiper-slide">
-                                                <div class="card">
-                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
-                                                    <div class="card-body">
-                                                        <p class="testimonial-text">Nam sit amet eleifend justo. Aliquam
-                                                            sit
-                                                            amet lacinia enim, eget facilisis ex. Ut pretium cursus
-                                                            eleifend. Integer feugiat malesuada quam vel basil venis
-                                                            proca
-                                                            jilo</p>
-                                                        <div class="details">
-                                                            <img class="testimonial-image"
-                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
-                                                            <div class="text">
-                                                                <div class="testimonial-author">Mary Longhorn</div>
-                                                                <div class="occupation">Manager - Firstdev</div>
-                                                            </div> <!-- end of text -->
-                                                        </div> <!-- end of testimonial-details -->
-                                                    </div>
-                                                </div>
-                                            </div> <!-- end of swiper-slide -->
-                                            <!-- end of slide -->
-
-                                            <!-- Slide -->
-                                            <div class="swiper-slide">
-                                                <div class="card">
-                                                    <img class="quotes" src="assets/img/quotes.svg" alt="alternative">
-                                                    <div class="card-body">
-                                                        <p class="testimonial-text">Lorem ipsum dolor sit amet,
-                                                            consectetur
-                                                            ing elit. Nulla id nisl tempus risus facilisis efficr ut
-                                                            tincidunt vitae enim non vehicula. Phases vitae metus in
-                                                            felis
-                                                            gravida ultrices zimbo</p>
-                                                        <div class="details">
-                                                            <img class="testimonial-image"
-                                                                src="assets/img/testimonial-1.jpg" alt="alternative">
-                                                            <div class="text">
-                                                                <div class="testimonial-author">Ronny Drummer</div>
-                                                                <div class="occupation">Designer - Sawdust</div>
                                                             </div> <!-- end of text -->
                                                         </div> <!-- end of testimonial-details -->
                                                     </div>
