añadiendo imagen de cotizacion

--- a/web.html
+++ b/web.html
@@ -151,7 +151,14 @@
                                     <b>facilitando los procesos
                                         de la empresa aportando un valor agregado profecional y empresarial.</b>
                                 </p>
+
+                                <div class="read-more text-left py-2">
+                                    <a href="CotizacionMarketplace.html">
+                                        <i class="fas fa-arrow-right"></i> Ver Cotizacion Basica
+                                    </a>
+                                </div>
                             </div>
+
 
                             <div class="row pl-5 pt-5 pl-md-0">
                                 <div class="col-md-6 col-12 icon-box" data-aos="fade-up">
