--- a/CotizacionMarketplace.html
+++ b/CotizacionMarketplace.html
@@ -63,7 +63,7 @@
     <section id="hero">
         <div class="container">
             <div class="row d-flex align-items-center py-5">
-                <div class=" col-lg-12 py-5 py-lg-0 order-2 order-lg-2 text-center" data-aos="fade-left">
+                <div class=" col-lg-12 py-5 py-lg-0 order-2 order-lg-2 text-center" data-aos="fade-left" >
                     <h1>Esta Es una cotizacion Basica de Marketplace <span style="opacity: 0.5;">(Tienda Virtual)</span>.<span>&#160;</span></h1>
                     <h2>Aqui encontraras cada una de nuestras soluciones para tu empresa.</h2>
                 </div>
@@ -75,8 +75,10 @@
         <section id="web" class="subsection pricing section-bg">
             <div class="container">
                 <div class="portfolio-links">
-                    <a href="assets/img/PlataformaPriceMarketplace.png" data-maxwidth="50px" class="venobox"
-                    title="App 1">
+                    <a href="assets/img/PlataformaPriceMarketplace.png" class="venobox"
+                    title="App 1"
+                    maxWidth= '1200px'
+                    >
                     <img src="assets/img/PlataformaPriceMarketplace.png" class="img-fluid" alt="">
                     </a>
                 </div>
