--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- End Hero -->
 
     <main id="main">
-
+<!-- 
         <section id="clients" class="clients section-bg">
             <div class="container">
                 <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="about" class="about section-bg">
             <div class="container">
@@ -193,10 +193,8 @@
 
         <section id="services" class="services section-bg">
             <div class="container">
-
                 <div class="section-title">
                     <h2 data-aos="fade-in">Servicios</h2>
-                    <!-- <p data-aos="fade-in">Estos son algunos de nuestros servicios que ofrecemos a nuestros clientes.</p> -->
                 </div>
                 <div class="row" id="listaservicios"></div>
             </div>
@@ -233,7 +231,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2 data-aos="fade-in">Nuestro Equipo</h2>
-                    <p data-aos="fade-in">Ellos son las personas que pueden hacer tus <b>SUEÑOS REALIDAD</b>, estan
+                    <p data-aos="fade-in">Ellos son algunas de las personas que pueden hacer tus <b>SUEÑOS REALIDAD</b>, estan
                         altamente capacitados para desarrollar las funciones necesarias para cada proceso de tu
                         proyecto. <b>Conocenos a continuacion:</b></p>
                 </div>
@@ -424,8 +422,6 @@
                 <div id="listapreguntas"></div>
             </div>
         </section>
-
-
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact section-bg">
             <div class="container">
@@ -588,10 +584,10 @@
             <div class="member" data-aos="fade-up">
                 <div class="pic"><img src="" alt=""></div>
                 <h4></h4>
-                <span></span>
+                <!-- <span></span> -->
                 <div class="social">
                     <a id="facebook" target="_blank" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a id="twitter" target="_blank" href=""><i class="fab fa-twitter"></i></a>
+                    <!-- <a id="twitter" target="_blank" href=""><i class="fab fa-twitter"></i></a> -->
                     <a id="instagram" target="_blank" href=""><i class="fab fa-instagram"></i></a>
                     <a id="linkedin" target="_blank" href=""><i class="fab fa-linkedin-in"></i></a>
                 </div>
