--- a/index.html
+++ b/index.html
@@ -371,8 +371,6 @@
                 "
               >
                 <h3>WEB</h3>
-                <span class="subtitle">DESDE</span>
-                <h3 class="subtitle">$500.000</h3>
                 <span class="font-weight-bold text-uppercase"
                   >LANDING PAGE</span
                 >
@@ -410,8 +408,6 @@
               >
                 <span class="featured-badge">OFERTA</span>
                 <h3>MARKETPLACE</h3>
-                <span class="subtitle">DESDE</span>
-                <h3 class="subtitle">$1'000.000</h3>
                 <span class="font-weight-bold">TIENDA VIRTUAL</span>
                 <p class="text-left description mt-2">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -433,8 +429,6 @@
               >
                 <span class="featured-badge">OFERTA</span>
                 <h3 class="">PERSONALIZADO</h3>
-                <span class="subtitle">DESDE</span>
-                <h3 class="subtitle">$1'500.000</h3>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Assumenda, non cum sint laudantium odio adipisci sequi quos
@@ -454,8 +448,6 @@
 
               <div class="col-lg-12 col-xl-3 box d-flex flex-column mt-2">
                 <h3>MOBILE</h3>
-                <span class="subtitle">DESDE</span>
-                <h3 class="subtitle">$2'000.000</h3>
                 <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. A
                   accusantium dolore aperiam tempora et tempore praesentium
@@ -487,8 +479,7 @@
               </div>
               <div class="col-lg-4 box d-flex flex-column">
                 <h3>Publicidad</h3>
-                <span class="subtitle">DESDE</span>
-                <h4>$60.000<span>Diseño Publicitario</span></h4>
+                <h4><span>Diseño Publicitario</span></h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
                   ea odio mollitia aliquam saepe? Architecto dolores cupiditate
@@ -503,8 +494,7 @@
               <div class="col-lg-4 box featured1 d-flex flex-column">
                 <span class="featured-badge">Oferta</span>
                 <h3>BRANDING</h3>
-                <span class="subtitle">DESDE</span>
-                <h4>$100.000<span>Diseño y creacion de Marca</span></h4>
+                <h4><span>Diseño y creacion de Marca</span></h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Libero ipsum provident corrupti unde eaque aliquid ea at nulla
@@ -520,8 +510,7 @@
 
               <div class="col-lg-4 box d-flex flex-column">
                 <h3>ILUSTRACIONES</h3>
-                <span class="subtitle">DESDE</span>
-                <h4>$70.000<span>Ilustraciones Personales</span></h4>
+                <h4><span>Ilustraciones Personales</span></h4>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Deleniti et praesentium voluptate facere officia dicta unde
