--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
                 </div>
             </div>
         </section> -->
-
         <section id="about" class="about section-bg">
             <div class="container">
                 <div class="row">
@@ -466,7 +465,7 @@
                                     <i class="far fa-envelope"></i>
                                     <h3>Correo</h3>
                                     <a style="color: #8ba55a;"
-                                        href="mailto:devandesignsuport@gmail.com">devandesignsuport@gmail.com</a>
+                                        href="mailto:devandesignsuport@gmail.com">suport@devanddesign.com</a>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -553,7 +552,6 @@
             </div>
         </div>
     </footer><!-- End Footer -->
-
 
     <!-- Templates -->
     <template id="preguntas">
